--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['cleaningdata.ipynb', 'README.md', '.ipynb_checkpoints', 'DataModel.ipynb', '.git', 'ApiCollection.ipynb', 'DATA_SET', 'machine_learning.ipynb']\n"
+      "['cleaningdata.ipynb', 'untitled_project', 'README.md', '.ipynb_checkpoints', 'DataModel.ipynb', '.git', 'ApiCollection.ipynb', 'DATA_SET', 'machine_learning.ipynb']\n"
      ]
     }
    ],
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1294,7 @@
     "    nn_model.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
     "\n",
     "    # Compile the model\n",
-    "    nn_model.compile(loss=\"binary_crossentropy\", optimizer='adam', metrics=[\"accuracy\"])\n",
+    "    nn_model.compile(loss=\"categorical_crossentropy\", optimizer='adam', metrics=[\"accuracy\"])\n",
     "\n",
     "\n",
     "    return nn_model"
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1326,21 +1326,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trial 497 Complete [00h 00m 16s]\n",
-      "val_accuracy: 0.7050847411155701\n",
-      "\n",
-      "Best val_accuracy So Far: 0.7096045017242432\n",
-      "Total elapsed time: 01h 12m 44s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the kerastuner search for best hyperparameters\n",
     "tuner.search(X_train_scaled,y_train,epochs=20,validation_data=(X_test_scaled,y_test))"
@@ -1348,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1358,7 @@
        " 'tuner/trial_id': '0217'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,27 +1370,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/karinagonzalez/anaconda3/envs/dev/lib/python3.10/site-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
-      "/Users/karinagonzalez/anaconda3/envs/dev/lib/python3.10/site-packages/keras_tuner/src/tuners/hyperband.py:435: UserWarning: Model 'sequential' had a build config, but the model cannot be built automatically in `build_from_config(config)`. You should implement `def build_from_config(self, config)`, and you might also want to implement the method  that generates the config at saving time, `def get_build_config(self)`. The method `build_from_config()` is meant to create the state of the model (i.e. its variables) upon deserialization.\n",
-      "  model.build_from_config(\n",
-      "/Users/karinagonzalez/anaconda3/envs/dev/lib/python3.10/site-packages/keras/src/saving/saving_lib.py:415: UserWarning: Skipping variable loading for optimizer 'adam', because it has 2 variables whereas the saved optimizer has 34 variables. \n",
-      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28/28 - 0s - 9ms/step - accuracy: 0.7096 - loss: -1.2713e+04\n",
-      "Loss: -12713.2568359375, Accuracy: 0.7096045017242432\n"
+      "28/28 - 0s - 4ms/step - accuracy: 0.7096 - loss: 0.0000e+00\n",
+      "Loss: 0.0, Accuracy: 0.7096045017242432\n"
      ]
     }
    ],
